--- a/quanlykho/src/QLK/view/QuanTriView.form
+++ b/quanlykho/src/QLK/view/QuanTriView.form
@@ -47,18 +47,15 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="pnSearch6" min="-2" pref="332" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="btnSearch" min="-2" pref="122" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="794" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace pref="886" max="-2" attributes="0"/>
-                          <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
+                  <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="pnSearch6" min="-2" pref="311" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="btnSearch" min="-2" pref="122" max="-2" attributes="0"/>
+                  <EmptySpace min="794" pref="1440" max="32767" attributes="0"/>
+              </Group>
+              <Group type="102" alignment="1" attributes="0">
+                  <EmptySpace pref="886" max="-2" attributes="0"/>
+                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="0" attributes="0">
@@ -240,7 +237,7 @@
                       <Component id="iconSearch6" min="-2" pref="48" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="txtSearch6" min="-2" pref="247" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="1358" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="1274" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -251,7 +248,7 @@
                           <Component id="txtSearch6" alignment="1" min="-2" max="-2" attributes="0"/>
                           <Component id="iconSearch6" alignment="1" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="0" pref="3" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -261,7 +258,7 @@
               <Properties>
                 <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/img/search30.png"/>
+                  <Image iconType="3" name="/QLK/img/search30.png"/>
                 </Property>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
@@ -650,7 +647,7 @@
                   <Font name="Tahoma" size="18" style="1"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/img/add_35_gradian.png"/>
+                  <Image iconType="3" name="/QLK/img/add_35_gradian.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Th&#xea;m"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -673,7 +670,7 @@
                   <Font name="Tahoma" size="18" style="1"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/img/update_35_gradian.png"/>
+                  <Image iconType="3" name="/QLK/img/update_35_gradian.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="S&#x1b0;&#x309;a"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -696,7 +693,7 @@
                   <Font name="Tahoma" size="18" style="1"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/img/delete_35_gradien.png"/>
+                  <Image iconType="3" name="/QLK/img/delete_35_gradien.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Xo&#x301;a"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -719,7 +716,7 @@
                   <Font name="Tahoma" size="18" style="1"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/img/quay_lai_35.png"/>
+                  <Image iconType="3" name="/QLK/img/quay_lai_35.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Nh&#xe2;&#x323;p la&#x323;i"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -741,7 +738,7 @@
                   <Font name="Tahoma" size="18" style="1"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/img/excel_35.png"/>
+                  <Image iconType="3" name="/QLK/img/excel_35.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Xu&#xe2;&#x301;t excel"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -763,7 +760,7 @@
                   <Font name="Tahoma" size="18" style="1"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/img/chart_35.png"/>
+                  <Image iconType="3" name="/QLK/img/chart_35.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Ph&#xe2;n quy&#x1ec1;n"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -785,7 +782,7 @@
                   <Font name="Tahoma" size="18" style="1"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/img/thoat_35.png"/>
+                  <Image iconType="3" name="/QLK/img/thoat_35.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Thoa&#x301;t"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
