--- a/quanlykho/src/QLK/view/QuanTriView.form
+++ b/quanlykho/src/QLK/view/QuanTriView.form
@@ -236,7 +236,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="iconSearch6" min="-2" pref="48" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="txtSearch6" min="-2" pref="247" max="-2" attributes="0"/>
+                      <Component id="txtSearch" min="-2" pref="247" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="1274" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -245,7 +245,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="txtSearch6" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtSearch" alignment="1" min="-2" max="-2" attributes="0"/>
                           <Component id="iconSearch6" alignment="1" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -267,7 +267,7 @@
                 </Property>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="txtSearch6">
+            <Component class="javax.swing.JTextField" name="txtSearch">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Times New Roman" size="24" style="0"/>
@@ -280,7 +280,7 @@
                 <Property name="name" type="java.lang.String" value="" noResource="true"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtSearch6ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtSearchActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
