--- a/quanlykho/src/QLK/Login/Home.form
+++ b/quanlykho/src/QLK/Login/Home.form
@@ -135,7 +135,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="MIA HOTEL"/>
+                <Property name="text" type="java.lang.String" value="QuangAnhStore"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel6">
@@ -149,7 +149,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Hotels &amp; Spa"/>
+                <Property name="text" type="java.lang.String" value="Prestige &amp; Quality"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="lblCV">
