--- a/quanlykho/src/QLK/view/QuanLyNK.form
+++ b/quanlykho/src/QLK/view/QuanLyNK.form
@@ -190,12 +190,9 @@
                                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
                               </Group>
-                              <Group type="102" alignment="1" attributes="0">
-                                  <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="btnSearch2" alignment="3" min="-2" pref="55" max="-2" attributes="0"/>
-                                      <Component id="btnSearch1" alignment="3" min="-2" pref="55" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Group type="103" alignment="1" groupAlignment="3" attributes="0">
+                                  <Component id="btnSearch2" alignment="3" min="-2" pref="55" max="-2" attributes="0"/>
+                                  <Component id="btnSearch1" alignment="3" min="-2" pref="55" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
